service/tests/schemas/snapshots/auth/change_password_validation_rejects_empty_current_password@auth.snap
---
source: tests/schemas/auth.rs
expression: result
---
Err(
    "Validation error: {\"current_password\":\"Current password is required\"}",
)
