service/tests/schemas/snapshots/auth/change_password_validation_rejects_mismatched_passwords@auth.snap
---
source: tests/schemas/auth.rs
expression: result
---
Err(
    "Validation error: {\"confirm_password\":\"Passwords do not match\"}",
)
