service/tests/schemas/snapshots/auth/change_password_validation_rejects_new_password_with_whitespace@auth.snap
---
source: tests/schemas/auth.rs
expression: result
---
Err(
    "Validation error: {\"password\":\"password cannot have spaces\"}",
)
