service/tests/schemas/snapshots/auth/change_password_validation_rejects_short_new_password@auth.snap
---
source: tests/schemas/auth.rs
expression: result
---
Err(
    "Validation error: {\"password\":\"password requires 8 characters\"}",
)
