service/tests/schemas/snapshots/auth/update_profile_validation_rejects_invalid_email@auth.snap
---
source: tests/schemas/auth.rs
expression: result
---
Err(
    "Validation error: {\"email\":\"Invalid email address\"}",
)
