service/tests/schemas/snapshots/auth/update_profile_validation_rejects_invalid_image@auth.snap
---
source: tests/schemas/auth.rs
expression: result
---
Err(
    "Validation error: {\"image\":\"Invalid image URL\"}",
)
