service/tests/schemas/snapshots/auth/update_profile_validation_rejects_long_name@auth.snap
---
source: tests/schemas/auth.rs
expression: result
---
Err(
    "Validation error: {\"name\":\"Name must be under 32 letters\"}",
)
