service/tests/schemas/snapshots/auth/update_profile_validation_rejects_name_with_special_chars@auth.snap
---
source: tests/schemas/auth.rs
expression: result
---
Err(
    "Validation error: {\"name\":\"Only letters, numbers and underscores can be used.\"}",
)
