service/tests/schemas/snapshots/auth/update_profile_validation_rejects_short_name@auth.snap
---
source: tests/schemas/auth.rs
expression: result
---
Err(
    "Validation error: {\"name\":\"Name requires 6 letters\"}",
)
